--- a/WebShopHangHieu/src/main/webapp/Login.xhtml
+++ b/WebShopHangHieu/src/main/webapp/Login.xhtml
@@ -27,7 +27,7 @@
                     
                     <div class="form-group">
                         <h:outputLabel value="Pass"/>
-                        <h:inputText id="txtPass" styleClass="form-control" value="#{userBean.pass}"></h:inputText>
+                        <h:inputSecret id="txtPass" styleClass="form-control" value="#{userBean.pass}"/>
                     </div>
                     
                     <div class="form-group">
