--- a/WebShopHangHieu/src/main/webapp/Register.xhtml
+++ b/WebShopHangHieu/src/main/webapp/Register.xhtml
@@ -35,11 +35,11 @@
                     </div>
                     <div class="form-group">
                         <h:outputLabel value="Pass"/>
-                        <h:inputText id="txtPass" styleClass="form-control" value="#{userBean.pass}"></h:inputText>
+                        <h:inputSecret id="txtPass" styleClass="form-control" value="#{userBean.pass}"/>
                     </div>
                     <div class="form-group">
                         <h:outputLabel value="Pass Confirm"/>
-                        <h:inputText id="txtPassCon" styleClass="form-control" value="#{userBean.passConfirm}"></h:inputText>
+                        <h:inputSecret id="txtPassCon" styleClass="form-control" value="#{userBean.passConfirm}"/>
                     </div>
                     <div class="form-group">
                         <h:commandButton value="Dang ky"  styleClass="btn btn-outline-success"
