--- a/WebShopHangHieu/src/main/webapp/AdminOrder.xhtml
+++ b/WebShopHangHieu/src/main/webapp/AdminOrder.xhtml
@@ -12,6 +12,9 @@
          <ui:composition template="templates/AdminBase.xhtml"
                          >
                                <ui:define name="AdminCategory">
+                                   <f:metadata>
+                     <f:viewAction action="#{userBean.checkLoginAdmin()}"></f:viewAction>
+                    </f:metadata>
                  <div class="right-ad">
 <!--                    <div class="button-contro">
                             <h:link value="Add Category" styleClass="btn btn-outline-success"
